--- a/src/App.css
+++ b/src/App.css
@@ -7,32 +7,28 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.app{
+  
+  min-height: 100vh;
+  background: rgb(37, 131, 185);
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.tweet{
+  
+  top: 20px;
+  margin-left: 5%;
+  height: 200px;
+  width: 200px;
+  border-radius: 20px;
+  background: white;
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  box-shadow: 5px 10px 30px  rgba(0, 0, 0, 0.6);
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
